diesel_compile_tests/tests/fail/select_carries_correct_result_type_info.stderr
error[E0277]: the trait bound `i32: FromSql<diesel::sql_types::Text, _>` is not satisfied
  --> $DIR/select_carries_correct_result_type_info.rs:19:27
   |
19 |     let ids = select_name.load::<i32>(&mut connection);
   |                           ^^^^ the trait `FromSql<diesel::sql_types::Text, _>` is not implemented for `i32`
   |
   = help: the following implementations were found:
             <i32 as FromSql<diesel::sql_types::Integer, DB>>
             <i32 as FromSql<diesel::sql_types::Integer, Mysql>>
             <i32 as FromSql<diesel::sql_types::Integer, Sqlite>>
   = note: required because of the requirements on the impl of `Queryable<diesel::sql_types::Text, _>` for `i32`
   = note: required because of the requirements on the impl of `FromSqlRow<diesel::sql_types::Text, _>` for `i32`
   = note: required because of the requirements on the impl of `CompatibleType<i32, _>` for `diesel::sql_types::Text`
   = note: required because of the requirements on the impl of `LoadQuery<_, i32>` for `SelectStatement<users::table, diesel::query_builder::select_clause::SelectClause<columns::name>>`

error[E0277]: the trait bound `*const str: FromSql<diesel::sql_types::Integer, _>` is not satisfied
  --> $DIR/select_carries_correct_result_type_info.rs:20:27
   |
20 |     let names = select_id.load::<String>(&mut connection);
   |                           ^^^^ the trait `FromSql<diesel::sql_types::Integer, _>` is not implemented for `*const str`
   |
   = help: the following implementations were found:
             <*const [u8] as FromSql<diesel::sql_types::Binary, DB>>
             <*const [u8] as FromSql<diesel::sql_types::Binary, Sqlite>>
             <*const str as FromSql<diesel::sql_types::Text, DB>>
             <*const str as FromSql<diesel::sql_types::Text, Sqlite>>
   = note: required because of the requirements on the impl of `FromSql<diesel::sql_types::Integer, _>` for `std::string::String`
   = note: required because of the requirements on the impl of `Queryable<diesel::sql_types::Integer, _>` for `std::string::String`
   = note: required because of the requirements on the impl of `FromSqlRow<diesel::sql_types::Integer, _>` for `std::string::String`
   = note: required because of the requirements on the impl of `CompatibleType<std::string::String, _>` for `diesel::sql_types::Integer`
   = note: required because of the requirements on the impl of `LoadQuery<_, std::string::String>` for `SelectStatement<users::table, diesel::query_builder::select_clause::SelectClause<columns::id>>`
